experimentData/JavaFuzzer/Jadx-detailedExperimentData/errorSamples/recompilation_failures/577/log-1-577.log

Test.java:93: error: bad operand types for binary operator '|'
                        i2 += (int) (((long) d2) | (-73.296f));
                                                 ^
  first type:  long
  second type: float
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

